syntax = "proto3";
package store;

service Storer {
    rpc StoreRecord (StoreRequest) returns (StoreReply);
}

message StoreRequest {
    string entity_id = 1 ;
    string entity_type = 2;

    string event_name = 3;
    string event_data = 4;
}

message StoreReply {
    string message = 1;
}